# CUDA-Mandelbrot

./: .gitignore  CMakeLists.txt  ColorImpl.cu  ColorImpl.cuh  PPM.cu  PPM.cuh  README.md  colors.c  colors.cu  main.c  main.cu  makefile
impls/: CpuMandelbrotImpl.cu  CpuMandelbrotImpl.cuh  GpuMandelbrotImpl.cu  GpuMandelbrotImpl.cuh  IMandelbrotImpl.cuh
